--- a/wakepark/build.gradle
+++ b/wakepark/build.gradle
@@ -25,6 +25,7 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
-	runtime('org.postgresql:postgresql')
+	compile('org.mariadb.jdbc:mariadb-java-client:1.5.8')
+	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
