--- a/wakepark/src/main/resources/application.properties
+++ b/wakepark/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=
 #when running for the first time:
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 logging.level.org.hibernate=ERROR
 security.ignored=/**
 spring.security.enabled=false
