--- a/wakepark/build.gradle
+++ b/wakepark/build.gradle
@@ -22,10 +22,12 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.mariadb.jdbc:mariadb-java-client:1.5.8')
+	runtime('org.springframework.boot:spring-boot-devtools')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
