--- a/wakepark_front/package.json
+++ b/wakepark_front/package.json
@@ -11,6 +11,7 @@
     "aurelia-animator-css": "^1.0.2",
     "aurelia-bootstrapper": "^2.1.1",
     "aurelia-fetch-client": "^1.3.1",
+    "aurelia-framework": "^1.2.0",
     "bluebird": "^3.4.1",
     "requirejs": "^2.3.2",
     "text": "github:requirejs/text#latest"
